Added new structure definition

--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 NBodySimulator = "0e6f8da7-a7fc-5c8b-a220-74e902c310f9"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
