--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NBodySimulator = "0e6f8da7-a7fc-5c8b-a220-74e902c310f9"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
