--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ examples/reset_infiltrate.jl
 load_finding.gif
 DynamicRelaxation.jl.code-workspace
 load_finding.mp4
+src/steady_state/experimental/
