--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,5 @@
+name = "DynamicRelaxation"
+
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
