--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 name = "DynamicRelaxation"
+uuid = "01280ee2-506b-4fc2-bbeb-79eecb245451"
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
