--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 name = "DynamicRelaxation"
 uuid = "01280ee2-506b-4fc2-bbeb-79eecb245451"
+version = "0.0.1"
+author = ["Axel Larsson"]
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
@@ -20,3 +22,9 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
 SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
