--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -12,11 +12,8 @@ jobs:
     strategy:
       matrix:
         julia-version: ['1.8']
-        julia-arch: [x64, x86]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        exclude:
-          - os: macOS-latest
-            julia-arch: x86
+        julia-arch: [x64]
+        os: [ubuntu-latest, macOS-latest]
 
     steps:
       - uses: actions/checkout@v2
