--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,10 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StaticGraphs = "4c8beaf5-199b-59a0-a7f2-21d17de635b6"
 SteadyStateDiffEq = "9672c7b4-1e72-59bd-8a11-6ac3964bc41f"
 
+[compat]
+ModelingToolkit = "v8.50.0"
+Plots = "v1.38.8"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
