--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NBodySimulator = "0e6f8da7-a7fc-5c8b-a220-74e902c310f9"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationNLopt = "4e6fcdb7-1186-4e1f-a706-475e75c168bb"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
